# cranelift

./: README.md
bforest/src/: lib.rs  map.rs  node.rs  path.rs  pool.rs  set.rs
codegen/: Cargo.toml  build.rs
codegen/meta/src/: default_map.rs  error.rs  gen_binemit.rs  gen_encodings.rs  gen_inst.rs  gen_legalizer.rs  gen_registers.rs  gen_settings.rs  gen_types.rs  srcgen.rs  unique_table.rs
codegen/meta/src/cdsl/: ast.rs  cpu_modes.rs  encodings.rs  formats.rs  instructions.rs  isa.rs  recipes.rs  type_inference.rs  typevar.rs  xform.rs
codegen/meta/src/isa/: mod.rs
codegen/meta/src/shared/: formats.rs  instructions.rs  legalize.rs  mod.rs
codegen/shared/src/: condcodes.rs  constant_hash.rs  lib.rs
codegen/src/: abi.rs  bitset.rs  cfg_printer.rs  context.rs  cursor.rs  data_value.rs  dce.rs  divconst_magic_numbers.rs  dominator_tree.rs  flowgraph.rs  fx.rs  inst_predicates.rs  lib.rs  licm.rs  loop_analysis.rs  nan_canonicalization.rs  peepmatic.rs  postopt.rs  predicates.rs  print_errors.rs  redundant_reload_remover.rs  remove_constant_phis.rs  result.rs  scoped_hash_map.rs  settings.rs  simple_gvn.rs  simple_preopt.rs  souper_harvest.rs  stack_layout.rs  timing.rs  topo_order.rs  unreachable_code.rs  value_label.rs  write.rs
codegen/src/binemit/: memorysink.rs  mod.rs  relaxation.rs  shrink.rs  stack_map.rs
codegen/src/ir/: builder.rs  constant.rs  dfg.rs  entities.rs  extfunc.rs  extname.rs  function.rs  globalvalue.rs  heap.rs  immediates.rs  instructions.rs  jumptable.rs  layout.rs  libcall.rs  mod.rs  progpoint.rs  stackslot.rs  table.rs  trapcode.rs  types.rs  valueloc.rs
codegen/src/isa/: call_conv.rs  constraints.rs  enc_tables.rs  encoding.rs  mod.rs  registers.rs  stack.rs  test_utils.rs
codegen/src/isa/aarch64/: abi.rs  lower.rs  lower_inst.rs  mod.rs
codegen/src/isa/arm32/: abi.rs  lower.rs  lower_inst.rs  mod.rs
codegen/src/legalizer/: boundary.rs  call.rs  globalvalue.rs  heap.rs  libcall.rs  mod.rs  split.rs  table.rs
codegen/src/machinst/: abi.rs  abi_impl.rs  adapter.rs  blockorder.rs  buffer.rs  compile.rs  debug.rs  helpers.rs  lower.rs  mod.rs  valueregs.rs  vcode.rs
codegen/src/regalloc/: affinity.rs  branch_splitting.rs  coalescing.rs  coloring.rs  context.rs  diversion.rs  live_value_tracker.rs  liveness.rs  liverange.rs  mod.rs  pressure.rs  register_set.rs  reload.rs  safepoint.rs  solver.rs  spilling.rs  virtregs.rs
codegen/src/verifier/: cssa.rs  flags.rs  liveness.rs  locations.rs  mod.rs
entity/src/: boxed_slice.rs  iter.rs  lib.rs  list.rs  map.rs  packed_option.rs  primary.rs  set.rs  sparse.rs
frontend/: Cargo.toml
frontend/src/: frontend.rs  lib.rs  ssa.rs  switch.rs
jit/: Cargo.toml
jit/examples/: jit-minimal.rs
jit/src/: backend.rs  compiled_blob.rs  lib.rs  memory.rs
jit/tests/: basic.rs
module/: Cargo.toml
module/src/: data_context.rs  lib.rs  module.rs
native/src/: lib.rs
peepmatic/src/: ast.rs  automatize.rs  dot_fmt.rs  lib.rs  linear_passes.rs  linearize.rs  parser.rs  traversals.rs  verify.rs
regalloc/: Cargo.toml  README.md
regalloc/lib/: Cargo.toml
regalloc/lib/src/: analysis_control_flow.rs  analysis_data_flow.rs  analysis_main.rs  analysis_reftypes.rs  avl_tree.rs  bt_coalescing_analysis.rs  bt_commitment_map.rs  bt_main.rs  bt_spillslot_allocator.rs  bt_vlr_priority_queue.rs  checker.rs  data_structures.rs  inst_stream.rs  lib.rs  pretty_print.rs  sparse_set.rs  union_find.rs
umbrella/: Cargo.toml
umbrella/src/: lib.rs
(+73 files in other folders)
