[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift-frontend"
version = "0.75.0"
description = "Cranelift IR builder helper"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cranelift-frontend"
categories = ["no-std"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../codegen", version = "0.75.0", default-features = false }
target-lexicon = "0.12"
log = { version = "0.4.6", default-features = false }
hashbrown = "0.11.2"
smallvec = { version = "1.6.1" }

[badges]
maintenance = { status = "experimental" }
