[package]
name = "cranelift-jit"
version = "0.75.0"
authors = ["The Cranelift Project Developers"]
description = "A JIT library backed by Cranelift"
repository = "https://github.com/bytecodealliance/wasmtime"
documentation = "https://docs.rs/cranelift-jit"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-module = { path = "../module", version = "0.75.0" }
cranelift-native = { path = "../native", version = "0.75.0", features = ["core"] }
cranelift-codegen = { path = "../codegen", version = "0.75.0", default-features = false, features = ["core"] }
cranelift-entity = { path = "../entity", version = "0.75.0" }
anyhow = { version = "1.0", default-features = false }
hashbrown = "0.11.2"
target-lexicon = "0.12"
log = { version = "0.4.6", default-features = false }
spin = "0.9.1"
lazy_static = { version = "1.4", features = ["spin_no_std"]}

[features]
default = []

[dev-dependencies]
cranelift = { path = "../umbrella", version = "0.75.0" }
cranelift-frontend = { path = "../frontend", version = "0.75.0" }
cranelift-entity = { path = "../entity", version = "0.75.0" }

[badges]
maintenance = { status = "experimental" }
